service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service

spec:
  type: ClusterIP
  selector:
    app: k8s-app
  ports:
    - port: 80
      targetPort: 80
